--- a/client/index.html
+++ b/client/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
   <link rel="icon" type="image/png" href="/logo.png" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
   <title>CityWatch</title>
 </head>
   <body>
